--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #333333; /* Cor de fundo cinza escuro */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: white; /* Texto branco */
 }
 
 .App-link {
-  color: #61dafb;
+  color: #888888; /* Cor cinza para o link */
 }
 
 @keyframes App-logo-spin {
